ARM-Templates/Virtual-Network/Basic/VNet-Template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "metadata": {
      "_generator": {
        "name": "bicep",
        "version": "0.6.18.56646",
        "templateHash": "10806234693722113459"
      }
    },
    "parameters": {
      "vnetName": {
        "type": "string",
        "defaultValue": "VNet1",
        "metadata": {
          "description": "VNet name"
        }
      },
      "vnetAddressPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/16",
        "metadata": {
          "description": "Address prefix"
        }
      },
      "subnet1Prefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/24",
        "metadata": {
          "description": "Subnet 1 Prefix"
        }
      },
      "subnet1Name": {
        "type": "string",
        "defaultValue": "Subnet1",
        "metadata": {
          "description": "Subnet 1 Name"
        }
      },
      "subnet2Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 2 Prefix"
        }
      },
      "subnet2Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 2 Name"
        }
      },
      "NSG1Name": {
        "type": "string",
        "defaultValue": "NSG1",
        "metadata": {
          "description": "NSG for subnet1"
        }
      },
      "NSG2Name": {
        "type": "string",
        "defaultValue": "NSG2",
        "metadata": {
          "description": "NSG for subnet2"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
    "resources": [
        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2021-08-01",
          "name": "[parameters('NSG1Name')]",
          "location": "[parameters('location')]",
          "properties": {
              "securityRules": [
                  {
                      "name": "SSH",
                      "properties": {
                          "access": "Allow",
                          "description": "Allow SSH connections",
                          "destinationAddressPrefix": "*",
                          "destinationPortRange": "22",
                          "direction": "Inbound",
                          "priority": 100,
                          "protocol": "Tcp",
                          "sourceAddressPrefix": "*",
                          "sourcePortRange": "*"
                      }
                  }
              ]
          }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2021-08-01",
        "name": "[parameters('NSG2Name')]",
        "location": "[parameters('location')]",
        "properties": {
            "securityRules": [
                {
                    "name": "SSH",
                    "properties": {
                        "access": "Allow",
                        "description": "Allow SSH connections",
                        "destinationAddressPrefix": "*",
                        "destinationPortRange": "22",
                        "direction": "Inbound",
                        "priority": 100,
                        "protocol": "Tcp",
                        "sourceAddressPrefix": "*",
                        "sourcePortRange": "*"
                    }
                }
            ]
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2021-08-01",
        "name": "[parameters('vnetName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG1Name'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG2Name'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('vnetAddressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnet1Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet1Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG1Name'))]"
                }
              }
            },
            {
              "name": "[parameters('subnet2Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet2Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG2Name'))]"
                }
              } 
            }
          ]
        }
      }
    ]
  }
